<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_add"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_firstName_add"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/firstName"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_add"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_lastName_add"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/lastName"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_firstName_add"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_address_add"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/address"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_lastName_add"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_number_add"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/number"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_address_add"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email_add"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/email"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_number_add"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ok"
        app:backgroundTint="@color/teal_200"
        app:cornerRadius="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_email_add"
        />

</RelativeLayout>